# Representative-Projects

./: README.md
C++/fibin/: fibin.h  fibin_test.cc
C++/images/: CMakeLists.txt  README.md  functional.h  images.h  test.cc
C++/playlist/tests/: playlist_test2.cc  playlist_test3.cc  playlist_test4.cc  playlist_test5.cc  playlist_test6.cc  test1.out  test3.out  test4.out  test5.out  test6.out
Java/Weather Application/: pom.xml
Java/Weather Application/src/main/java/pl/edu/mimuw/weather/: AppMain.java
Java/Weather Application/src/main/java/pl/edu/mimuw/weather/control/: ForecastImageControl.java  ForecastImagePane.java  ForecastPane.java  ForecastPaneExtended.java  ForecastTooltip.java  ForecastValueControl.java  ForecastValueExtendedControl.java  ForecastValueExtendedControl2.java  IntervalValidator.java  SpinningFontIcon.java  TooltipProlongHelper.java
Java/Weather Application/src/main/java/pl/edu/mimuw/weather/controller/: WeatherAppController.java
Java/Weather Application/src/main/java/pl/edu/mimuw/weather/event/: AreaForecastEvent.java  AreaPollutionEvent.java  AreaType.java  ChangeSourceRequestEvent.java  ErrorEvent.java  EventStream.java  ForecastEvent.java  (+9 more)
Java/Weather Application/src/main/resources/: log4j.properties
Java/Weather Application/src/main/resources/css/: jfx.css  weather.css
Java/Weather Application/src/main/resources/fxml/: close-dialog.fxml  forecast-image-pane.fxml  forecast-pane-extended.fxml  forecast-pane.fxml  settings-dialog.fxml  weather-main.fxml
Nasm/dcl/: README.md  dcl.asm  run.sh
Python/Fashion-MNIST/: README.md
(+6 files in other folders)
